Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignNumberTextObjField.quorum
class Main
    Text v
    action Main
        v:SetValue(text)
        Test(v)
    end

    action Test(number var)
    end
end
